navbar alignment issue fixed

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,9 +1,6 @@
 html body {
-    margin: 0
-}
-
-.container-fluid{
-    padding: 0 !important;
+    margin: 0;
+    padding: 0;
 }
 
 .navbar-brand {
